--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
         <title>Test Page</title>
         <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
         <link rel="stylesheet" type="text/css" href="css/style.css">
+	    <!--[if lt IE 9]>
+	      <script src="js/html5shiv.min.js"></script>
+	      <script src="js/respond.min.js"></script>
+	    <![endif]-->
     </head>
 
     
     <body>
-	  
+	  	<button ></button>
 	    
 
         <script src="js/jquery-3.2.1.js"></script>
